<resources>
    <string name="app_name">Ejercicio1CM_GCJA</string>
    <string name="Titulo">Calculadora de Áreas</string>
    <string name="Creadora">Jessica Alejandra González Cortés</string>
    <string name="Version">Version 4</string>
    <string name="Variable1">a</string>
    <string name="Variable2">b</string>
    <string name="AmbosValores">Por favor ingresa ambos valores</string>
    <string name="UnValor">Se requiere un valor</string>
    <string name="Verificar">Verificar</string>


    <string-array name="Opciones">
        <item>Operacion</item>
        <item>Rectangulo</item>
        <item>Triangulo</item>
        <item>Pentagono</item>
    </string-array>
</resources>